[package]
name = "three-mem-fast"
version = "0.1.0"
edition = "2024"

[dependencies]
atoi = "3.1.0"
fast-float2 = "0.2.3"
flate2 = { version = "1.1.9", default-features = false, features = ["zlib-rs"] }
quick-xml = "0.41.0"
thiserror = "2.0.18"
zip = "8.6.0"

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "parse"
harness = false
